added challanges and footer sections

--- a/index.html
+++ b/index.html
@@ -93,16 +93,17 @@
                   <img class="w-[40px]" src="./assets/Frame 3.png" alt="" />
                 </div>
                 <div class="">
-                  <button
-                    class="flex gap-[5px] xl:gap-[5px] text-[16px] justify-center items-center font-extrabold py-[8px] px-3 rounded-full bg-[#ABEF5F] hover:bg-slate-300 duration-300 w-[160px]"
-                  >
-                    Book Consult
-                    <img
-                      class="w-[18px] h-[18px]"
-                      src="./assets/arrow-up-right-02.png"
-                      alt=""
-                    />
-                  </button>
+                  <a href=""
+                    ><button
+                      class="flex gap-[5px] xl:gap-[5px] text-[16px] justify-center items-center font-extrabold py-[8px] px-3 rounded-full bg-[#ABEF5F] hover:bg-slate-300 duration-300 w-[160px]"
+                    >
+                      Book Consult
+                      <img
+                        class="w-[18px] h-[18px]"
+                        src="./assets/arrow-up-right-02.png"
+                        alt=""
+                      /></button
+                  ></a>
                 </div>
               </div>
               <!-- small and medium device menubar -->
@@ -168,16 +169,17 @@
               accents, and large windows that flood the space with natural
               light.
             </p>
-            <button
-              class="btn mx-auto w-[97%] md:w-[206px] text-[20px] font-bold flex justify-center items-center gap-[5px] px-5 py-2 bg-[#33ffbb] rounded-full"
-            >
-              View Details
-              <img
-                class="w-[22px] h-[22px]"
-                src="./assets/arrow-up-right-01.png"
-                alt=""
-              />
-            </button>
+            <a href=""
+              ><button
+                class="btn mx-auto w-[97%] md:w-[206px] text-[20px] font-bold flex justify-center items-center gap-[5px] px-5 py-2 bg-[#33ffbb] rounded-full"
+              >
+                View Details
+                <img
+                  class="w-[22px] h-[22px]"
+                  src="./assets/arrow-up-right-01.png"
+                  alt=""
+                /></button
+            ></a>
           </div>
         </div>
       </section>
@@ -204,12 +206,13 @@
               <div
                 class="lg:flex-1 flex flex-col justify-center items-center text-center lg:justify-start lg:items-start lg:text-left"
               >
-                <button
-                  class="hover:bg-slate-200 duration-300 font-bold text-[#494949] bg-[#fbfafa] py-1 px-3 mb-4 rounded-full"
+                <a href=""
+                  ><button
+                    class="hover:bg-slate-200 duration-300 font-bold text-[#494949] bg-[#fbfafa] py-1 px-3 mb-4 rounded-full"
+                  >
+                    <i class="fa-solid fa-arrow-right mr-1"></i>About Us
+                  </button></a
                 >
-                  <i class="fa-solid fa-arrow-right mr-1"></i
-                  ><a class="" href="">About Us</a>
-                </button>
                 <h2
                   class="text-2xl md:text-[32px] lg:text-[40px] font-bold text-[#212121] mb-4 md:mb-6 lg:leading-tight"
                 >
@@ -365,12 +368,13 @@
             <div
               class="flex flex-col justify-center items-center text-center mb-0 lg:mb-4"
             >
-              <button
-                class="hover:bg-slate-200 duration-300 font-bold text-[#494949] bg-[#FFFFFF] py-1 px-4 mb-4 rounded-full"
+              <a href=""
+                ><button
+                  class="hover:bg-slate-200 duration-300 font-bold text-[#494949] bg-[#FFFFFF] py-1 px-4 mb-4 rounded-full"
+                >
+                  <i class="fa-solid fa-arrow-right mr-1"></i>How we works
+                </button></a
               >
-                <i class="fa-solid fa-arrow-right mr-1"></i
-                ><a class="" href="">How we works</a>
-              </button>
               <h1
                 class="text-[24px] mb-4 md:text-[32px] lg:text-[40px] md:mb-6 font-bold text-[#212121]"
               >
@@ -460,12 +464,14 @@
           <div
             class="flex flex-col justify-center items-center text-center mb-6 md:mb-6 lg:mb-8"
           >
-            <button
-              class="hover:bg-slate-300 duration-300 font-bold text-[#494949] bg-[#e9ebe7] py-1 px-4 mb-4 rounded-full"
+            <a href=""
+              ><button
+                class="hover:bg-slate-300 duration-300 font-bold text-[#494949] bg-[#e9ebe7] py-1 px-4 mb-4 rounded-full"
+              >
+                <i class="fa-solid fa-arrow-right mr-1"></i>Explore our Latest
+                works
+              </button></a
             >
-              <i class="fa-solid fa-arrow-right mr-1"></i
-              ><a class="" href="">Explore our Latest works</a>
-            </button>
             <h1
               class="text-[24px] mb-4 md:text-[32px] lg:text-[40px] md:mb-6 font-bold text-[#212121]"
             >
@@ -615,12 +621,13 @@
           <div
             class="flex flex-col justify-center items-center text-center mb-6 md:mb-6 lg:mb-8"
           >
-            <button
-              class="hover:bg-slate-300 duration-300 font-bold text-[#494949] bg-[#e9ebe7] py-1 px-4 mb-4 rounded-full"
+            <a href=""
+              ><button
+                class="hover:bg-slate-300 duration-300 font-bold text-[#494949] bg-[#e9ebe7] py-1 px-4 mb-4 rounded-full"
+              >
+                <i class="fa-solid fa-arrow-right mr-1"></i>Rinterio News
+              </button></a
             >
-              <i class="fa-solid fa-arrow-right mr-1"></i
-              ><a class="" href="">Rinterio News</a>
-            </button>
             <h1
               class="text-[24px] mb-4 md:text-[32px] lg:text-[40px] md:mb-6 font-bold text-[#212121]"
             >
@@ -633,7 +640,9 @@
             </p>
           </div>
           <!-- start card part -->
-          <div class="mx-auto grid grid-cols-1 lg:grid-cols-3 gap-6 md:gap-5 lg:gap-6">
+          <div
+            class="mx-auto grid grid-cols-1 lg:grid-cols-3 gap-6 md:gap-5 lg:gap-6"
+          >
             <!-- card 1 -->
             <div class="">
               <div
@@ -781,12 +790,164 @@
                 </div>
               </div>
             </div>
-            
           </div>
           <!-- end card part -->
         </div>
       </section>
       <!-- end articles and new section -->
+
+      <!-- start next project section -->
+      <section class="bg-[url('./assets/bg.jpg')] bg-cover bg-center">
+        <!-- container -->
+        <div
+          class="container mx-auto px-5 mt-3 w-[97%] lg:w-[80%] py-8 md:py-[70px] lg:py-[100px]"
+        >
+          <!-- content part -->
+          <div
+            class="flex flex-col justify-center items-center text-center mb-6 md:mb-6 lg:mb-8"
+          >
+            <a href=""
+              ><button
+                class="hover:bg-slate-300 duration-300 font-bold text-[#494949] bg-[#e9ebe7] py-1 px-4 mb-4 rounded-full"
+              >
+                <i class="fa-solid fa-arrow-right mr-1"></i>Let’s Connect
+              </button></a
+            >
+            <h1
+              class="text-[24px] mb-4 md:text-[32px] lg:text-[40px] md:mb-6 font-bold text-[#212121]"
+            >
+              Let’s Discuss Next Project
+            </h1>
+            <p class="text-[16px] text-[#494949] font-medium">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, <br class="hidden md:block" />
+              featuring weathered wood, sleek metal accents.
+            </p>
+          </div>
+          <!-- input filed part -->
+          <div class="grid grid-cols-1 md:grid-cols-12 gap-5 md:gap-6">
+            <div class="md:col-span-6">
+              <input
+                class="w-full text-[16px] py-[10px] pl-5 rounded-full"
+                type="text"
+                placeholder="First Name*"
+              />
+            </div>
+            <div class="md:col-span-6">
+              <input
+                class="w-full text-[16px] py-[10px] pl-5 rounded-full"
+                type="text"
+                placeholder="Last Name*"
+              />
+            </div>
+            <div class="md:col-span-6">
+              <input
+                class="w-full text-[16px] py-[10px] pl-5 rounded-full"
+                type="tel"
+                name=""
+                id=""
+                placeholder="Phone Number*"
+              />
+            </div>
+            <div class="md:col-span-6">
+              <input
+                class="w-full text-[16px] py-[10px] pl-5 rounded-full"
+                type="email"
+                name=""
+                id=""
+                placeholder="Email Number*"
+              />
+            </div>
+            <div class="md:col-span-12">
+              <textarea
+                class="w-full text-[16px] py-[10px] pl-5 rounded-3xl"
+                name=""
+                id=""
+                rows="10"
+                cols=""
+                placeholder="Write your message here"
+              >
+Write your message here</textarea
+              >
+            </div>
+            <div class="md:col-span-12">
+              <a href=""
+                ><button
+                  class="w-full flex gap-[5px] xl:gap-[5px] text-[16px] justify-center items-center font-extrabold py-[8px] px-3 rounded-full bg-[#ABEF5F] hover:bg-slate-300 duration-300"
+                >
+                  Send Mail
+                  <img
+                    class="w-[18px] h-[18px]"
+                    src="./assets/arrow-up-right-02.png"
+                    alt=""
+                  /></button
+              ></a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end next project section -->
     </main>
+    <footer>
+      <section class="bg-[#1C1C1C]">
+        <!-- container -->
+        <div
+          class="container mx-auto w-[97%] lg:w-[80%] px-5 py-8 md:py-[70px] lg:py-[100px]"
+        >
+          <!-- content part -->
+          <div
+            class="flex flex-col justify-center items-center text-center"
+          >
+            <div class="flex gap-[8px] mb-4 justify-center items-center">
+              <img
+                class="w-[32px] h-[32px] mt-[3px] ml-[1px]"
+                src="./assets/arrow-up-right-01.png"
+                alt=""
+              />
+              <h2 class="text-[32px] font-extrabold text-[#E9E9E9]">
+                Rinterio
+              </h2>
+            </div>
+            <p class="text-[16px] text-[#737373] mb-10 md:mb-12 font-medium">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, <br class="hidden md:block" />
+              featuring weathered wood, sleek metal accents.
+            </p>
+          </div>
+          <!-- items part -->
+          <div class="mb-10 md:mb-[60px]">
+            <ul
+              class="grid grid-cols-1 gap-8 md:grid-cols-5 text-[16px] text-[#E9E9E9]"
+            >
+              <li class="hover:text-gray-400 duration-300 mx-auto"><a href="">Home</a></li>
+              <li class="hover:text-gray-400 duration-300 mx-auto">
+                <a href="">Services</a>
+              </li>
+              <li class="hover:text-gray-400 duration-300 mx-auto">
+                <a href="">Portfolio</a>
+              </li>
+              <li class="hover:text-gray-400 duration-300 mx-auto"><a href="">Blogs</a></li>
+              <li class="hover:text-gray-400 duration-300 mx-auto">
+                <a href="">ContactUs</a>
+              </li>
+            </ul>
+          </div>
+          <!-- button -->
+          <div class="flex justify-center items-center mx-auto ">
+            <a class="w-full md:w-[160px]" href=""
+              ><button
+                class="flex gap-[5px] xl:gap-[5px] text-[16px] justify-center items-center font-extrabold py-[8px] px-3 rounded-full bg-[#ABEF5F] hover:bg-slate-300 duration-300 w-full md:w-[160px]"
+              >
+                Book Consult
+                <img
+                  class="w-[18px] h-[18px]"
+                  src="./assets/arrow-up-right-02.png"
+                  alt=""
+                /></button
+            ></a>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
