added some changes

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
               >
                 Our Works Process
               </h1>
-              <p class="text-[16px] text-[#494949] font-medium">
+              <p class="w-[97%] md:w-4/6 text-[16px] text-[#494949] font-medium">
                 The barn house captivates with its blend of rustic charm and
                 modern sophistication, <br class="hidden md:block" />
                 featuring weathered wood, sleek metal accents.
