--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <section class="">
           <!-- container -->
           <div
-            class="container mx-auto w-[97%] px-3 pb-8 pt-5 md:pt-[20px] md:pb-16 lg:mb-20 lg:pt-6 lg:pb-20"
+            class="container mx-auto w-[97%] px-5 pb-8 pt-5 md:pt-[20px] md:pb-16 lg:mb-20 lg:pt-6 lg:pb-20"
           >
             <!-- content part -->
             <div
@@ -380,7 +380,7 @@
               >
                 Our Works Process
               </h1>
-              <p class="w-[97%] md:w-4/6 text-[16px] text-[#494949] font-medium">
+              <p class="text-[16px] text-[#494949] font-medium">
                 The barn house captivates with its blend of rustic charm and
                 modern sophistication, <br class="hidden md:block" />
                 featuring weathered wood, sleek metal accents.
