--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
           <!-- navbar center -->
           <div class="navbar-center hidden lg:flex lg:mr-[15px]">
             <ul class="menu menu-horizontal text-[16px] px-1 gap-3">
-              <li class="font-extrabold"><a href="">Home</a></li>
-              <li class="lg:text-[#737373]"><a href="">Services</a></li>
-              <li class="lg:text-[#737373]"><a href="">Portfolio</a></li>
-              <li class="lg:text-[#737373]"><a href="">Blogs</a></li>
-              <li class="lg:text-[#737373]"><a href="">Contact Us</a></li>
+              <li class="font-extrabold"><a href="#home">Home</a></li>
+              <li class="lg:text-[#737373]"><a href="#services">Services</a></li>
+              <li class="lg:text-[#737373]"><a href="#portfolio">Portfolio</a></li>
+              <li class="lg:text-[#737373]"><a href="#blogs">Blogs</a></li>
+              <li class="lg:text-[#737373]"><a href="#contact">Contact Us</a></li>
             </ul>
           </div>
           <!-- navbar end -->
@@ -124,16 +124,16 @@
                       <a href="#home">Home</a>
                     </li>
                     <li class="hover:bg-red-400 p-1">
-                      <a href="#about">Services</a>
+                      <a href="#services">Services</a>
                     </li>
                     <li class="hover:bg-red-400 p-1">
-                      <a href="#shop">Portfolio</a>
+                      <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="hover:bg-red-400 p-1">
-                      <a href="#all fruits">Blogs</a>
+                      <a href="#blogs">Blogs</a>
                     </li>
                     <li class="hover:bg-red-400 p-1">
-                      <a href="#support">Contact Us</a>
+                      <a href="#contact">Contact Us</a>
                     </li>
                   </ul>
                 </div>
@@ -143,8 +143,8 @@
         </div>
       </section>
       <!-- end navbar section -->
-      <!-- start 1st section -->
-      <section class="container mx-auto mt-3 px-2 mb-10 w-[97%]">
+      <!-- start hero section -->
+      <section id="home" class="container mx-auto mt-3 px-2 mb-10 w-[97%]">
         <div class="flex flex-col justify-center items-center text-center">
           <!-- image part -->
           <div class="mb-4 lg:mb-6">
@@ -183,12 +183,12 @@
           </div>
         </div>
       </section>
-      <!-- end 1st section -->
+      <!-- end hero section -->
     </header>
     <main class="bg-[#F2F2F2]">
       <!-- this section included 3 part -->
       <!-- container of 3 sections -->
-      <section class="mt-12 md:mt-16 lg:mt-20 bg-[#F2F2F2]">
+      <section id="services" class="mt-12 md:mt-16 lg:mt-20 bg-[#F2F2F2]">
         <!-- 1st part -->
         <!-- start design spaces section -->
         <section
@@ -359,7 +359,7 @@
 
         <!-- 3rd part -->
         <!-- start works process section-->
-        <section class="">
+        <section id="portfolio" class="">
           <!-- container -->
           <div
             class="container mx-auto w-[97%] px-5 pb-8 pt-5 md:pt-[20px] md:pb-16 lg:mb-20 lg:pt-6 lg:pb-20"
@@ -614,7 +614,7 @@
       </section>
       <!-- end latest portfolio -->
       <!-- start articles and new section -->
-      <section class="bg-[#F2F2F2] py-3 md:py-12 lg:py-24">
+      <section id="blogs" class="bg-[#F2F2F2] py-3 md:py-12 lg:py-24">
         <!-- container -->
         <div class="container mx-auto px-5 mt-3 mb-10 w-[97%]">
           <!-- content part -->
@@ -797,7 +797,7 @@
       <!-- end articles and new section -->
 
       <!-- start next project section -->
-      <section class="bg-[url('./assets/bg.jpg')] bg-cover bg-center">
+      <section id="contact" class="bg-[url('./assets/bg.jpg')] bg-cover bg-center">
         <!-- container -->
         <div
           class="container mx-auto px-5 mt-3 w-[97%] lg:w-[80%] py-8 md:py-[70px] lg:py-[100px]"
@@ -919,16 +919,16 @@ Write your message here</textarea
             <ul
               class="grid grid-cols-1 gap-8 md:grid-cols-5 text-[16px] text-[#E9E9E9]"
             >
-              <li class="hover:text-gray-400 duration-300 mx-auto"><a href="">Home</a></li>
+              <li class="hover:text-gray-400 duration-300 mx-auto"><a href="#home">Home</a></li>
               <li class="hover:text-gray-400 duration-300 mx-auto">
-                <a href="">Services</a>
+                <a href="#services">Services</a>
               </li>
               <li class="hover:text-gray-400 duration-300 mx-auto">
-                <a href="">Portfolio</a>
+                <a href="#portfolio">Portfolio</a>
               </li>
-              <li class="hover:text-gray-400 duration-300 mx-auto"><a href="">Blogs</a></li>
+              <li class="hover:text-gray-400 duration-300 mx-auto"><a href="#blogs">Blogs</a></li>
               <li class="hover:text-gray-400 duration-300 mx-auto">
-                <a href="">ContactUs</a>
+                <a href="#contact">ContactUs</a>
               </li>
             </ul>
           </div>
